@@ -194,3 +194,34 @@ body .header-radius {
   width: 100%;
   padding: 20px;
 }
+
+.clients {
+  margin-top: 120px;
+}
+
+.clients-top {
+  text-align: center;
+}
+.clients-top p {
+  letter-spacing: 1.6px;
+  color: #130F49;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 700;
+  opacity: 0.8;
+}
+.clients-top h2 {
+  color: #130F49;
+  font-size: 50px;
+}
+
+.clients-imgs {
+  margin-top: 60px;
+}
+.clients-imgs .row {
+  justify-content: space-between;
+}
+.clients-imgs .client-img img {
+  width: 100%;
+}
