@@ -209,6 +209,37 @@
         </div>
     </section>
 
+    <section class="clients">
+        <div class="container">
+            <div class="clients-top">
+                <p>Companies</p>
+                <h2>Customers & Clients</h2>
+            </div>
+            <div class="clients-imgs">
+                <div class="row">
+                    <div class="col-2 client-img">
+                        <img src="img/client-img.svg" alt="">
+                    </div>
+
+                    <div class="col-2 client-img">
+                        <img src="img/client-img.svg" alt="">
+                    </div>
+
+                    <div class="col-2 client-img">
+                        <img src="img/client-img.svg" alt="">
+                    </div>
+
+                    <div class="col-2 client-img">
+                        <img src="img/client-img.svg" alt="">
+                    </div>
+
+                    <div class="col-2 client-img">
+                        <img src="img/client-img.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/app.js"></script>
 </body>
