@@ -1,0 +1,31 @@
+.clients {
+    margin-top: 120px;
+}
+.clients-top {
+    text-align: center;
+    p {
+        letter-spacing: 1.6px;
+        color: $colorPrimary;
+        text-transform: uppercase;
+        margin-bottom: 0;
+        font-size: 14px;
+        font-weight: 700;
+        opacity: .8;
+    }
+    h2 {
+        color: $colorPrimary;
+        font-size: 50px;
+    }
+}
+.clients-imgs {
+    margin-top: 60px;
+    .row {
+        justify-content: space-between;
+    }
+    .client-img {
+        img {
+            width: 100%;
+        }
+    }
+
+}
